# airplane-mode

./: .clang-format  .gitignore  CMakeLists.txt  check_version_consistent  meson.build  meson_options.txt  readme.txt
.reuse/: dep5
dbusif/: CMakeLists.txt  com.wwjjbb.RfKillManager.conf  com.wwjjbb.RfKillManager.xml  generate_interface  meson.build  rfkilladaptor.cpp  rfkilladaptor.cpp.license  rfkilladaptor.h
dbusserver/: CMakeLists.txt  devrfkill.cpp  devrfkill.h  main.cpp  maintask.cpp  maintask.h  meson.build  rfkillmanager.cpp  rfkillmanager.h  test_devrfkill.cpp
init/: CMakeLists.txt  meson.build  rfkillmanager
plasmoid/: CMakeLists.txt  Messages.sh  meson.build
plasmoid/src/: CMakeLists.txt  airplanemode.cpp  airplanemode.h  meson.build  metadata.json.in
plasmoid/src/package/: meson.build  metadata.json
plasmoid/src/package/contents/images/: pairs.svgz.license
plasmoid/src/package/contents/ui/: main.qml
plasmoid/src/resources/: meson.build  mode-off.xcf  mode-on.xcf  screenshot.xcf
